Fri Oct 08 10:36:18 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/orpostlist.cc,matcher/orpostlist.h: Fix performance
	  regression in some cases caused by the introduction of
	  OrPostList::check().

Thu Oct 07 03:53:11 GMT 2010  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc: Clear tout before each iteration in scaleweight1.

Wed Oct 06 14:30:34 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS: Update from 1.0.22 and ChangeLog.

Wed Oct 06 12:39:36 GMT 2010  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Add two more testcases for having a phrase
	  generator between prefix and term.

Wed Oct 06 12:37:32 GMT 2010  Olly Betts <olly@survex.com>

	* include/xapian/matchspy.h,include/xapian/postingsource.h: Remove
	  "experimental" marker from PostingSource and ValueCountMatchSpy.

Wed Oct 06 12:31:01 GMT 2010  Olly Betts <olly@survex.com>

	* docs/index.html: Add links to replication and facets documents, and
	  fix typo in serialistion document link.

Wed Oct 06 12:12:51 GMT 2010  Olly Betts <olly@survex.com>

	* docs/Makefile.am,docs/categorisation.rst,docs/facets.rst: Change the
	  categorisation document to talk about facets, since that's the
	  terminology that seems to be most widely used these days, and
	  "categorisation" can also mean automatically assigning categories to
	  documents.  Fix up references to features which were removed or
	  changed during development.

Wed Oct 06 12:11:21 GMT 2010  Olly Betts <olly@survex.com>

	* docs/internals.html: Add link to replication protocol.

Wed Oct 06 08:36:50 GMT 2010  Olly Betts <olly@survex.com>

	* examples/simplesearch.cc: Fix cut and paste error in usage message.

Wed Oct 06 00:12:40 GMT 2010  Olly Betts <olly@survex.com>

	* api/emptypostlist.cc,matcher/queryoptimiser.cc: In the query
	  optimiser, use value range bounds to check for value ranges which
	  must be empty.
	* tests/api_opvalue.cc: Add testcase valuerange5 to check this
	  optimisation actually fires.
