@@ -1,3 +1,8 @@
+Fri Oct 08 12:29:50 GMT 2010  Olly Betts <olly@survex.com>
+
+	* tests/api_backend.cc: Add testcase phrase3 to provide coverage for
+	  SelectPostList::skip_to().
+
 Fri Oct 08 10:36:18 GMT 2010  Olly Betts <olly@survex.com>
 
 	* matcher/orpostlist.cc,matcher/orpostlist.h: Fix performance
